Mon Nov  7 22:11:01 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kerberos_v4.c: Don't define functions manually, but pull in the
	appropriate include files (com_err.h, krb5/ext-proto.h,
	krb5/los-proto.h, etc.)

	* kdc_util.c (kdc_process_tgs_req): Fix lineage check so that we
		don't fail if we're cross-authenticating with a realm with
		the same length as our own.  ('||' should have been '&&')

Fri Nov  4 17:47:46 1994  Theodore Y. Ts'o  (tytso@dcl)

	* do_as_req.c (process_as_req): Use published interface to call
		krb5_random_key().

Fri Oct 14 00:31:14 1994  Theodore Y. Ts'o  (tytso@dcl)

	* main.c (process_args): Select the cryptosystem to be used using
		krb5_use_cstype() instead of using a implementation
		specific assignment.  Also, allow the encryption type to
		be specified using a command line option.

Tue Oct 11 22:11:09 1994  Theodore Y. Ts'o  (tytso@dcl)

	* do_as_req.c (process_as_req): Don't assume that the request
		server's realm name is null terminated.  Compare the
		request server against changepw/kerberos using
		krb5_principal_compare.

Tue Oct  4 16:42:16 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdc_util.c (kdc_rdreq_keyproc): Add widen.h and narrow.h around
		keyproc call so that the argument types are widened.

Mon Oct  3 13:13:48 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.

	* Makefile.in: Remove krb5kdc on make clean

Fri Sep 30 22:13:13 1994  Theodore Y. Ts'o  (tytso@dcl)

	* extern.c: Add placeholder for magic number

Thu Sep 29 00:03:59 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executable when library changes.

Wed Sep 21 17:40:56 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdc_util.c, kdc_util.h (realm_compare): Change realm_compare so
		that both arguments are principals.  This makes it less
		confusing....

	* kdc_util.c (add_to_transited): Folded in Tony Andrea's changes
		so that add_to_transited doesn't assume that the contents