@@ -1,3 +1,8 @@
+Tue Nov  8 17:51:30 1994  Theodore Y. Ts'o  (tytso@dcl)
+
+	* do_tgs_req.c (process_tgs_req): Use published interface to call
+		krb5_random_key().
+
 Mon Nov  7 22:11:01 1994  Theodore Y. Ts'o  (tytso@dcl)
 
 	* kerberos_v4.c: Don't define functions manually, but pull in the
